@@ -522,8 +522,8 @@ void KKEditClass::doEditMenuItems()
 				this->doPrefs();
 				break;
 			case PLUGPREFSMENUITEM:
-				DEBUGSTR(PLUGPREFSMENUITEM)
-				//doPlugPrefs(NULL,0);
+				this->pluginPrefsWindow->exec();
+				this->setToolbarSensitive();
 				break;
 		}
 }
