@@ -1,4 +1,5 @@
 0.5.2
+Plug prefs started.
 Store metadata for plugin.
 Added metadata to example plugin.
 Added example plugin.
